--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-   font-family: 'Inter', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .box {
@@ -18,4 +18,7 @@ html {
 .arena {
     border: 1px dotted olive;
     height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
